--- a/index.html
+++ b/index.html
@@ -35,6 +35,47 @@
         <div id="weather-deatail" class="flex flex-wrap gap"></div>
     </div>
 
+
+    <section id="footer">
+
+        <div class="footer">
+
+              <div class="logoinfo" data-aos="fade-up">
+                    <h2>Light App</h2>
+                    <p>By Irtiza Ashraf</p>
+
+                    <div class="contact-details">
+                          <h1>Contact Us</h1>
+                          <li>
+                                <div class="fa fa-phone"></div><a href="tel:+923122545311">+923352027809</a>
+                          </li>
+                          <li>
+                                <div class="fa fa-envelope"></div><a href="ahsanali45444@gmail.com">irtizashraf802@gmail.com</a>
+                          </li>
+
+                    </div>
+              </div>
+
+              <div class="info" data-aos="fade-up">
+                    <h1>Social Media's </h1>
+                    <div class="social">
+                          <div class="logos">
+                                <a href="https://www.instagram.com/sadlover4849/" target="_blank"
+                                      class="fa fa-instagram"></a>
+                                <a href="https://www.linkedin.com/in/irtiza-ashraf-a56071281/" target="_blank"
+                                      class="fa fa-linkedin"></a>
+                                <a href="https://www.facebook.com/xtalish.larka.589" target="_blank"
+                                      class="fa fa-facebook"></a>
+                                <a href="https://github.com/IrtizaAshraf"
+                                      target="_blank" class="fa fa-github fa-beat-fade"></a>
+                          </div>
+                    </div>
+              </div>
+        </div>
+        <footer>© Copyright 2023 All Rights Reserved</footer>
+    </section>
+
+
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="script.js"></script>
 </body>
