--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
         <div class="footer">
 
               <div class="logoinfo" data-aos="fade-up">
-                    <h2>Light App</h2>
+                    <h2 class="footerhead">Light App</h2>
                     <p>By Irtiza Ashraf</p>
 
                     <div class="contact-details">
-                          <h1>Contact Us</h1>
+                          <h1 class="footerhead">Contact Us</h1>
                           <li>
                                 <div class="fa fa-phone"></div><a href="tel:+923122545311">+923352027809</a>
                           </li>
@@ -57,7 +57,7 @@
               </div>
 
               <div class="info" data-aos="fade-up">
-                    <h1>Social Media's </h1>
+                    <h1 class="footerhead">Social Media's </h1>
                     <div class="social">
                           <div class="logos">
                                 <a href="https://www.instagram.com/sadlover4849/" target="_blank"
