--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="footer">
 
                 <div class="logoinfo" data-aos="fade-up">
-                    <h2 class="footerhead">Light App</h2>
+                    <h2 class="footerhead">Weather Forecast</h2>
                     <p>By Irtiza Ashraf</p>
 
                     <div class="contact-details">
